# scantailor-advanced

./: .gitignore  CMakeLists.txt  README.md  TESTING.md  build-deb.sh  build-windows.sh  linux_build.sh  version.h.in
.github/workflows/: ci.yml  cmake.yml  codeql.yml  lint.yml  release.yml
docs/: ISSUES_REVIEW.md
flatpak/: org.scantailor.Advanced.json
src/: CMakeLists.txt
src/app/: DefaultParamsDialog.cpp  MainWindow.cpp  MainWindow.h  ProjectOpeningContext.cpp  main.cpp
src/core/: ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  FilterOptionsWidget.h  ImageLoader.cpp  ImageTransformation.cpp  ImageTransformation.h  ImageViewBase.cpp  ImageViewBase.h  ProjectReader.cpp  ProjectReader.h  ProjectWriter.cpp  ProjectWriter.h  Utils.h  ZoneEditorBase.cpp
src/core/filters/deskew/: CMakeLists.txt  Filter.cpp  (+14 more)
src/core/tests/: CMakeLists.txt  TestDeskewParams.cpp  TestImageId.cpp  TestMargins.cpp  TestObliqueFinder.cpp  TestPageId.cpp  TestPageRange.cpp  TestSelectContentApply.cpp  TestUnits.cpp
src/core/zones/: ZoneContextMenuInteraction.cpp  ZoneDefaultInteraction.cpp  ZoneInteractionContext.h
src/foundation/: CMakeLists.txt  FastQueue.h  FlagOps.h  Proximity.cpp
src/foundation/tests/: CMakeLists.txt  TestConstants.cpp  TestLineIntersectionScalar.cpp  TestProximity.cpp  TestUtils.cpp
src/imageproc/: Binarize.cpp  Binarize.h  BinaryImage.cpp  CMakeLists.txt  SkewFinder.cpp  SkewFinder.h  WienerFilter.cpp
src/imageproc/tests/: CMakeLists.txt  TestDpi.cpp
src/math/: CMakeLists.txt
src/math/spfit/: FittableSpline.h
src/math/tests/: CMakeLists.txt  TestLineBoundedByRect.cpp  TestLinearFunction.cpp  TestQuadraticFunction.cpp  TestSidesOfLine.cpp
src/qt_tests/: CMakeLists.txt  main.cpp  tst_core_qt.cpp  tst_core_qt.h  tst_ux_qt.cpp  tst_ux_qt.h
src/resources/unix/: scantailor.desktop.in
(+34 files in other folders)
